--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-*.css linguist-language=React
-*.js linguist-language=React
-*.jsx linguist-language=React
-*.html linguist-language=React
+# *.css linguist-language=React
+# *.js linguist-language=React
+# *.jsx linguist-language=React
+# *.html linguist-language=React
